--- a/build.gradle
+++ b/build.gradle
@@ -27,8 +27,11 @@ dependencies {
     implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-gateway'
 
     implementation 'org.springframework.cloud:spring-cloud-starter-loadbalancer'
-    implementation group: 'io.springfox', name: 'springfox-boot-starter', version: '3.0.0'
-    implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '3.0.0'
+//    implementation group: 'io.springfox', name: 'springfox-boot-starter', version: '3.0.0'
+//    implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '3.0.0'
+    implementation group: 'org.springdoc', name: 'springdoc-openapi-webflux-core', version: '1.4.1'
+    implementation group: 'org.springdoc', name: 'springdoc-openapi-webflux-ui', version: '1.4.1'
+    implementation group: 'org.springdoc', name: 'springdoc-openapi-webmvc-core', version: '1.4.1'
 
 //    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-kubernetes', version: '1.1.9.RELEASE'
 //    testImplementation group: 'io.dekorate', name: 'kubernetes-spring-starter', version: '2.1.4'
