--- a/build.gradle
+++ b/build.gradle
@@ -19,19 +19,18 @@ ext {
 dependencies {
     compileOnly 'org.projectlombok:lombok'
 
-    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-netflix-eureka-client', version: '3.0.3'
+//    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-netflix-eureka-client', version: '3.0.3'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter'
 //    implementation 'org.springframework.boot:spring-boot-starter-web'
 // --> Don't use it with spring cloud gateway because spring cloud gateway runs on top of Netty and requires webflux
     implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-gateway'
 
-    implementation 'org.springframework.cloud:spring-cloud-starter-loadbalancer'
+//    implementation 'org.springframework.cloud:spring-cloud-starter-loadbalancer'
 //    implementation group: 'io.springfox', name: 'springfox-boot-starter', version: '3.0.0'
 //    implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '3.0.0'
-    implementation group: 'org.springdoc', name: 'springdoc-openapi-webflux-core', version: '1.4.1'
-    implementation group: 'org.springdoc', name: 'springdoc-openapi-webflux-ui', version: '1.4.1'
-    implementation group: 'org.springdoc', name: 'springdoc-openapi-webmvc-core', version: '1.4.1'
+    implementation group: 'org.springdoc', name: 'springdoc-openapi-webflux-core', version: '1.5.9'
+    implementation group: 'org.springdoc', name: 'springdoc-openapi-webflux-ui', version: '1.5.9'
 
 //    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-kubernetes', version: '1.1.9.RELEASE'
 //    testImplementation group: 'io.dekorate', name: 'kubernetes-spring-starter', version: '2.1.4'
@@ -42,7 +41,7 @@ dependencies {
 
     annotationProcessor 'org.projectlombok:lombok'
 
-    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+//    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 //    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-security', version: '2.2.5.RELEASE'
 }
 
